fixed grid gaps on faculty home and admin home

--- a/resources/css/AdminView/AdminHome.css
+++ b/resources/css/AdminView/AdminHome.css
@@ -151,15 +151,15 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   justify-content: space-between;
-  gap: 20px;
-  margin: 20px;
+  gap: 5px;
+  margin: 5px;
 }
 
 .info-box {
   background-color: rgba(255, 255, 255, 0.95);
   padding: 20px;
-  margin-top: 20px;
-  margin: 20px;
+  margin-top: 5px;
+  margin: 25px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
